samples/_failures_safe/1761325955_2d0523_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_19acb43f.c: In function ‘main’:
./samples/SAFE/__tmp_19acb43f.c:143:35: error: expected ‘)’ at end of input
  143 |         if (is_error_level(entries
      |                           ~       ^
      |                                   )
./samples/SAFE/__tmp_19acb43f.c:143:9: error: expected declaration or statement at end of input
  143 |         if (is_error_level(entries
      |         ^~
./samples/SAFE/__tmp_19acb43f.c:143:9: error: expected declaration or statement at end of input
